[package]
name = "rtge_examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "print_sprite"

[[bin]]
name = "print_centered_on_sprite"

[[bin]]
name = "move_sprite"

[[bin]]
name = "control_sprite"

[[bin]]
name = "animated_sprite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
rtge = "0.2.0"
tokio = "1.29.1"
